test/errors/epochMerkleDistributor.ts
export enum EpochMerkleDistributorErrors {
  EpochNotActive = 'EPOCH_NOT_ACTIVE',
  AlreadyClaimed = 'ALREADY_CLAIMED',
  MerkleProofVerifyFailed = 'MERKLE_PROOF_VERIFY_FAILED'
}
